// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonPrimary /> should render button 1`] = `
<DocumentFragment>
  <button
    class="c-ggYOOi c-eUyIYb c-eUyIYb-heajzE-color-primary"
  >
    Button
  </button>
</DocumentFragment>
`;

exports[`<ButtonPrimary /> should render loader 1`] = `
<DocumentFragment>
  <button
    class="c-ggYOOi c-eUyIYb c-dxqvqv c-eUyIYb-heajzE-color-primary"
  >
    <span
      class="c-goHKWa"
    />
  </button>
</DocumentFragment>
`;
